[gd_scene load_steps=3 format=2]

[ext_resource path="res://FriendDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/DynamicFontMedium.tres" type="DynamicFont" id=2]

[node name="FriendDisplay" type="HBoxContainer"]
margin_right = 399.0
margin_bottom = 124.0
custom_constants/separation = 25
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 399.0
margin_bottom = 208.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 399.0
margin_bottom = 4.0

[node name="DisplayName" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 399.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="DisplayNameLabel" type="Label" parent="VBoxContainer/DisplayName"]
margin_right = 160.0
margin_bottom = 26.0
text = "Display Name:"

[node name="DisplayName" type="Label" parent="VBoxContainer/DisplayName"]
unique_name_in_owner = true
margin_left = 170.0
margin_right = 394.0
margin_bottom = 26.0
text = "PericoDeLosPalotes"

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 399.0
margin_bottom = 106.0
custom_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer/Title"]
margin_right = 57.0
margin_bottom = 26.0
text = "Title:"

[node name="Title" type="Label" parent="VBoxContainer/Title"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 188.0
margin_bottom = 26.0
text = "Superhero"

[node name="CurrentLevel" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 399.0
margin_bottom = 157.0
custom_constants/separation = 10

[node name="CurrentLevelLabel" type="Label" parent="VBoxContainer/CurrentLevel"]
margin_right = 165.0
margin_bottom = 26.0
text = "Current Level:"

[node name="CurrentLevel" type="Label" parent="VBoxContainer/CurrentLevel"]
unique_name_in_owner = true
margin_left = 175.0
margin_right = 218.0
margin_bottom = 26.0
text = "100"

[node name="FriendStatus" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 399.0
margin_bottom = 208.0
custom_constants/separation = 10

[node name="FriendStatusLabel" type="Label" parent="VBoxContainer/FriendStatus"]
margin_right = 163.0
margin_bottom = 26.0
text = "Friend Status:"

[node name="FriendStatus" type="Label" parent="VBoxContainer/FriendStatus"]
unique_name_in_owner = true
margin_left = 173.0
margin_right = 399.0
margin_bottom = 26.0
text = "NO_RELATIONSHIP"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 424.0
margin_right = 428.0
margin_bottom = 208.0

[node name="Compare" type="Button" parent="."]
margin_left = 453.0
margin_right = 578.0
margin_bottom = 208.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Compare"

[connection signal="pressed" from="Compare" to="." method="_on_compare_pressed"]
